--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ author:
   name             : "李柯辰"
   avatar           : "images/lkc1.jpg"
   bio              : "南京航空航天大学"
-  location         : "Nanjing, Jiangsu China"
+  location         : "中国 江苏 南京"
   employer         : 
   pubmed           : 
   googlescholar    :
