--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ baidu_site_verification  :
 # Site Author
 author:
   name             : "李柯辰"
-  avatar           : "images/lkc1.jpg"
+  avatar           : "images/android-chrome-512x512.png"
   bio              : "南京航空航天大学"
   location         : "中国 江苏 南京"
   employer         : 
